samples/_failures_safe/1761127482_cd1a45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2d5610b8.c: In function ‘main’:
./samples/SAFE/__tmp_2d5610b8.c:151:5: error: expected expression at end of input
  151 |     if (choice ==
      |     ^~
./samples/SAFE/__tmp_2d5610b8.c:151:5: error: expected declaration or statement at end of input
